--- a/hahahaha.html
+++ b/hahahaha.html
@@ -2,36 +2,46 @@
 <html>
 	<head>
 		<meta charsrt="utf-8" />
-		<title>剑侠情缘叁</title>
+		<title>五毒武学技能</title>
 		<link href="css/style.css"
 		type="text/css" rel=
 		"stylesheet" />
 	</head>
 	<body>
 		<div id="titlename">
-		<h1>大型武侠网游：剑侠情缘叁</h1>
+		<center><h1><B><FONT size=8号><font color="#AA5599">大</font><font color="#B560A4">型</font><font color="#C06BAF">武</font><font color="#CB76BA">侠</font><font color="#D681C5">网</font><font color="#E18CD0">游</font><font color="#EC97DB">：</font><font color="#F7A2E6">剑</font><font color="#FFADF1">侠</font><font color="#FFB8FC">情</font><font color="#FFBBFF">缘</font><font color="#FFBBFF">叁</font><font color="#FFBBFF">【</font><font color="#FFBBFF">五</font><font color="#FFBBFF">毒</font><font color="#FFBBFF">教</font><font color="#FFBBFF">：</font><font color="#FFBBFF">武</font><font color="#FFBBFF">学</font><font color="#FFBBFF">技</font><font color="#FFBBFF">能</font><font color="#FFBBFF">】</font></h1></center>
 		</div>
 			<div id="nav">
-				<center><h3>五毒教-武学技能</h3></center>
 			</div>
 			<div id="content">
 			<div id="copyright">
 			<body>
 			
-		<p>毒经：</P>
+		<FONT size=4号 color=“#8E388E”><p>毒经：</P>
 		<p>蝎心 【闻音栖林，风动琵琶】</P>
+		<center><img src="蝎心.jpg"></center>
 		<p>蟾啸 【玉宫心冷，蟾宫啸月】</P>
+		<center><img src="蟾啸.jpg"></center>
 		<p>蛇影 【杯弓照影，碧蛇惊神】</P>
+		<center><img src="蛇影.jpg"></center>
 		<p>百足 【金头玉爪，千足游天】</P>
+		<center><img src="百足.jpg"></center>
 		<p>千丝 【千丝笼海，地网天罗】</P>
+		<center><img src="千丝.jpg"></center>
 		<br>
 		<p>补天诀：</P>
-		<p>冰茧蚕丝 【寒蚕冰丝凝霜露】</P>
+		<p>冰蚕牵丝 【寒蚕冰丝凝霜露】</P>
+		<center><img src="冰蚕牵丝.jpg"></center>
 		<p>圣手织天 【心系苍生巧织天】</P>
+		<center><img src="圣手织天.jpg"></center>
 		<p>蛊惑众生 【大荒妖蛊惑众生】</P>
+		<center><img src="蛊惑众生.jpg"></center>
 		<p>醉舞九天 【有酒平步上九天】</P>
+		<center><img src="醉舞九天.jpg"></center>
 		<p>女娲补天 【上古仙人手织天】</P>
+		<center><img src="女娲补天.jpg"></center>
 		<p>千蝶吐瑞 【天河彩蝶吐方瑞】</P>
+		<center><img src="千蝶吐瑞.jpg"></center></FONT>
 		<embed src="yehuo.mp3" HIDDEN=TRUE loop=true>
 	</body>
 	</p>
