--- a/hahahahaha.html
+++ b/hahahahaha.html
@@ -2,29 +2,23 @@
 <html>
 	<head>
 		<meta charsrt="utf-8" />
-		<title>剑侠情缘叁</title>
+		<title>五毒主要NPC介绍</title>
 		<link href="css/style.css"
 		type="text/css" rel=
 		"stylesheet" />
 	</head>
 	<body>
 		<div id="titlename">
-		<h1>大型武侠网游：剑侠情缘叁</h1>
+		<center><h1><B><FONT size=8号><font color="#AA5599">大</font><font color="#B45FA3">型</font><font color="#BE69AD">武</font><font color="#C873B7">侠</font><font color="#D27DC1">网</font><font color="#DC87CB">游</font><font color="#E691D5">：</font><font color="#F09BDF">剑</font><font color="#FAA5E9">侠</font><font color="#FFAFF3">情</font><font color="#FFB9FD">缘</font><font color="#FFBBFF">叁</font><font color="#FFBBFF">【</font><font color="#FFBBFF">五</font><font color="#FFBBFF">毒</font><font color="#FFBBFF">教</font><font color="#FFBBFF">：</font><font color="#FFBBFF">主</font><font color="#FFBBFF">要</font><font color="#FFBBFF">N</font><font color="#FFBBFF">P</font><font color="#FFBBFF">C</font><font color="#FFBBFF">介</font><font color="#FFBBFF">绍</font><font color="#FFBBFF">】</font></h1></center>
 		</div>
 			<div id="nav">
-				<center><h3>五毒教-主要NPC</h3></center>
 			</div>
 			<div id="content">
 			<div id="copyright">
+			<center><img src="NPC.jpg"></center>
 			<body>
 			
-		<p>前五毒教主魔刹罗</P>
-		<p>五毒教主曲云</P>
-		<p>德夯孙飞亮</P>
-		<p>玉蟾使凤瑶</P>
-		<p>天蛛使容夏</P>
-		<p>风蜈使纳罗</P>
-		<p>圣蝎使阿幼朵</P>
+		
 		<embed src="yehuo.mp3" HIDDEN=TRUE loop=true>
 	</body>
 	</p>
