--- a/hahahahahaha.html
+++ b/hahahahahaha.html
@@ -2,23 +2,24 @@
 <html>
 	<head>
 		<meta charsrt="utf-8" />
-		<title>剑侠情缘叁</title>
+		<title>五毒同人图赏</title>
 		<link href="css/style.css"
 		type="text/css" rel=
 		"stylesheet" />
 	</head>
 	<body>
 		<div id="titlename">
-		<h1>大型武侠网游：剑侠情缘叁</h1>
+		<center><h1><B><FONT size=8号><font color="#AA5599">大</font><font color="#B560A4">型</font><font color="#C06BAF">武</font><font color="#CB76BA">侠</font><font color="#D681C5">网</font><font color="#E18CD0">游</font><font color="#EC97DB">：</font><font color="#F7A2E6">剑</font><font color="#FFADF1">侠</font><font color="#FFB8FC">情</font><font color="#FFBBFF">缘</font><font color="#FFBBFF">叁</font><font color="#FFBBFF">【</font><font color="#FFBBFF">五</font><font color="#FFBBFF">毒</font><font color="#FFBBFF">教</font><font color="#FFBBFF">：</font><font color="#FFBBFF">同</font><font color="#FFBBFF">人</font><font color="#FFBBFF">图</font><font color="#FFBBFF">赏</font><font color="#FFBBFF">】</font></h1></center>
 		</div>
 			<div id="nav">
-				<center><font style="BACKGROUND-COLOR:#cc33cc" color=#cccccc>五毒教-同人图赏</font></center>
 			</div>
 			<div id="content">
 			<div id="copyright">
-			<img src="f6.jpg" alt="Anish kapoor" />
-			<img src="2325543r1eg36xzpa6ufgp.jpg" alt="Anish kapoor" />
-			<img src="10b6ac4bd11373f0a1e75db6a70f4bfbfaed0437.jpg" alt="Anish kapoor" />
+			<Br>
+			<Br>
+			<marquee Onmouseover=this.stop() Onmouseout=this.start()><img src=图片移动1.jpg></marquee>
+			<Br>
+			<marquee Onmouseover=this.stop() Onmouseout=this.start()><img src=图片移动2.jpg></marquee>
 			<body>
 		<embed src="yehuo.mp3" HIDDEN=TRUE loop=true>
 	</body>
