--- a/hahaha.html
+++ b/hahaha.html
@@ -2,36 +2,26 @@
 <html>
 	<head>
 		<meta charsrt="utf-8" />
-		<title>剑侠情缘叁</title>
+		<title>五毒门派介绍</title>
 		<link href="css/style.css"
 		type="text/css" rel=
 		"stylesheet" />
 	</head>
 	<body>
 		<div id="titlename">
-		<h1>大型武侠网游：剑侠情缘叁</h1>
+		<center><h1><B><FONT size=8号><fieldset style="width:500px;border:#8E388E solid 2px;"><legend><font color="#AA5599">大</font><font color="#B560A4">型</font><font color="#C06BAF">武</font><font color="#CB76BA">侠</font><font color="#D681C5">网</font><font color="#E18CD0">游</font><font color="#EC97DB">：</font><font color="#F7A2E6">剑</font><font color="#FFADF1">侠</font><font color="#FFB8FC">情</font><font color="#FFBBFF">缘</font><font color="#FFBBFF">叁</font><font color="#FFBBFF">【</font><font color="#FFBBFF">门</font><font color="#FFBBFF">派</font><font color="#FFBBFF">介</font><font color="#FFBBFF">绍</font><font color="#FFBBFF">：</font><font color="#FFBBFF">五</font><font color="#FFBBFF">毒</font><font color="#FFBBFF">教</font><font color="#FFBBFF">】</font></legend><FONT size=4号>五毒是金山软件西山居游戏工作室开发的《剑侠情缘网络版叁》中的一个门派；五毒武学融合苗疆蛊术与五毒毒术，控虫之术，共分为两个心法，毒经和补天诀。毒经通过对毒和蛊的神秘运用，以各样奇诡之剧毒攻敌；补天诀则以蛊术疗伤续命，尽在鼓掌之间，更可操控圣蝎、玉蟾、灵蛇、风蜈、天蛛五种蛊虫，在补天心法下操作增益效果的碧蝶，为苗疆不传秘技。</FONT></fieldset></FONT></B></h1></center>
 		</div>
 			<div id="nav">
-				<center><h3>五毒教</h3></center>
+				<center><h3><FONT size=6号 color="#AA5599">五毒门派图标</FONT></h3></center>
 			</div>
 			<div id="content">
 			<div id="copyright">
 			<center><img src="221969932061.jpg" alt="Anish kapoor" /></center>
+			<center><img src="诗句.jpg"></center>
+			<center><img src="3421.jpg"></center>
 			<body>
 			
-		<p>五毒教（内部自称五圣教）是一个历史悠久，非常神秘的组织。</P>
-		<p>对于中原武林来说，五毒永远是一个最神秘的门派。</P>
-		<p>他们自给自足，一般不涉足中原，但是一旦惹上他们，除了一死，别无他法。</P>
-		<p>再加上五毒难以解释的施毒之术，常常杀人于无形之中，五毒成为武林人士最不愿意招惹的门派。</P>
-        <p>唐开元二十六年（公元738年）五毒教主魔刹罗突然失踪。</P>
-		<p>五年后（公元742年）长老艾黎带着一个前教主与汉人所生的女儿曲云回来，并欲立为新教主。</P>
-		<p>左长老乌蒙贵发动了叛乱，并乘乱击杀旧教主魔刹罗（但至今仍未发现尸体，五毒弟子都相信她没死），</P>
-		<p>但最后被右长老艾黎镇压成功，不得不逃出五毒，自立了一支天一教。</P>
-	    <p>乌蒙贵为报前耻，居然勾结南诏，并用偷出来的最高蛊术秘方《尸咒》研制尸人，意欲重回五毒。</P>
-		<p>而由于五毒奉为至宝的《尸咒》失传多年，而且复杂无比的炼制过程，导致第一批尸人的炼制失败。</P>
-		<p>但经过过后的几次炼制成功过后，乌蒙贵决定要制造更强大的尸人，所以决定去中原用武林高手做尸人的原型。</P>
-		<p>这也导致苗人在中原武林的恶名招彰，但汉人有怎么能分清谁是天一谁是五毒的弟子呢？</P>
-		<p>而五毒弟子也是痛恨汉人的狡诈加上语言的不便，更是懒得解说什么，如此一来仇恨也越积越深。</P>
+		
 		<embed src="yehuo.mp3" HIDDEN=TRUE loop=true>	
 	</body>
 	</p>
